Updated dependencies, mainly to fix vulnerabilities.