@@ -6,21 +6,16 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import gov.nysenate.sage.model.address.Address;
 import gov.nysenate.sage.model.geo.Point;
-import org.apache.commons.io.IOUtils;
-import org.apache.http.client.methods.CloseableHttpResponse;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.entity.StringEntity;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClientBuilder;
-import org.apache.http.impl.client.LaxRedirectStrategy;
+import lombok.Getter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
@@ -29,6 +24,11 @@ import static org.junit.Assert.assertEquals;
 
 public class ProdReadinessTest {
     private static final Logger logger = LoggerFactory.getLogger(ProdReadinessTest.class);
+    private static final HttpClient httpClient = HttpClient.newBuilder()
+            .followRedirects(HttpClient.Redirect.NORMAL)
+            .build();
+    private static final ObjectMapper objectMapper = new ObjectMapper();
+    @Getter
     private String baseUrl = "http://localhost:8080";
 
     Properties prop =  new Properties();
@@ -49,10 +49,6 @@ public class ProdReadinessTest {
 
     private final ArrayList<Point> testPoints = new ArrayList<>();
 
-    public String getBaseUrl() {
-        return this.baseUrl;
-    }
-
     private void initializeProperties() throws IOException, NullPointerException {
         InputStream appPropsStream = getClass().getResourceAsStream("/app.properties");
         this.prop.load(appPropsStream);
@@ -69,48 +65,29 @@ public class ProdReadinessTest {
         testPoints.add(new Point("42.6533668", "-73.7599828"));
     }
 
-    private HttpURLConnection createHttpRequest(String ctxPath, String apiPath) throws Exception {
+    private JsonNode sendGetRequest(String ctxPath, String apiPath) throws IOException, InterruptedException {
+        return send(requestBuilder(ctxPath, apiPath).GET());
+    }
+
+    private JsonNode sendPostRequest(String ctxPath, String apiPath, String json) throws IOException, InterruptedException {
+        return send(requestBuilder(ctxPath, apiPath)
+                .header("Content-Type", "application/json")
+                .POST(HttpRequest.BodyPublishers.ofString(json)));
+    }
+
+    private static HttpRequest.Builder requestBuilder(String ctxPath, String apiPath) {
         apiPath = apiPath.replace(" ","%20");
         logger.info("{}{}\n", ctxPath, apiPath);
-        URL url = new URL(ctxPath + apiPath);
-        HttpURLConnection con = (HttpURLConnection) url.openConnection();
-        con.setRequestMethod("GET");
-        con.setUseCaches(false);
-        con.setDoOutput(true);
-        con.setInstanceFollowRedirects(true);
-        if (con.getResponseCode() == HttpURLConnection.HTTP_MOVED_TEMP
-                || con.getResponseCode() == HttpURLConnection.HTTP_MOVED_PERM) {
-            String location = con.getHeaderField("Location");
-            URL newUrl = new URL(location);
-            con = (HttpURLConnection) newUrl.openConnection();
+        return HttpRequest.newBuilder(URI.create(ctxPath + apiPath))
+                .header("Accept", "application/json");
+    }
+
+    private static JsonNode send(HttpRequest.Builder request) throws IOException, InterruptedException {
+        HttpResponse<String> response = httpClient.send(request.build(), HttpResponse.BodyHandlers.ofString());
+        if (response.statusCode() >= 400) {
+            throw new IOException("HTTP " + response.statusCode() + " from " + response.uri());
         }
-        return con;
-    }
-
-
-    private CloseableHttpResponse createHttpPostRequest(String ctxPath, String apiPath, String json) throws Exception {
-        apiPath = apiPath.replace(" ","%20");
-        logger.info("{}{}\n", ctxPath, apiPath);
-        CloseableHttpClient client = HttpClientBuilder.create().setRedirectStrategy(new LaxRedirectStrategy()).build();
-        HttpPost httpPost = new HttpPost(ctxPath + apiPath);
-        StringEntity entity = new StringEntity(json);
-        httpPost.setEntity(entity);
-        httpPost.setHeader("Accept", "application/json");
-        httpPost.setHeader("Content-type", "application/json");
-        return client.execute(httpPost);
-    }
-
-    private JsonNode getResponseAndCloseStream(HttpURLConnection conn) throws IOException {
-        JsonNode jsonResponse = getResponseFromInputStream(conn.getInputStream());
-        conn.disconnect();
-        return jsonResponse;
-    }
-
-    private JsonNode getResponseFromInputStream(InputStream is) throws IOException {
-        String sageResponse = IOUtils.toString(is, StandardCharsets.UTF_8);
-        JsonNode jsonResponse = new ObjectMapper().readTree(sageResponse);
-        is.close();
-        return jsonResponse;
+        return objectMapper.readTree(response.body());
     }
 
     private String turnAddressesIntoJson() {
@@ -175,254 +152,206 @@ public class ProdReadinessTest {
         String pointJson = prodReadinessTest.turnPointsIntoJson();
 
         // Test Address Api Functionality
-        HttpURLConnection addressValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                baseUrl, "/api/v2/address/validate?addr1=44 Fairlawn Avenue&city=Albany&state=NY");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(addressValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse)); //Expected - Actual
 
-        HttpURLConnection providerAisAddressValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl, "/api/v2/address/validate?addr1=44 Fairlawn Avenue&city=Albany&state=NY&provider=AIS");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(providerAisAddressValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
-        HttpURLConnection cityStateValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/address/citystate?zip5=12210");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(cityStateValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
-        HttpURLConnection providerAisCityStateValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/address/citystate?zip5=12210&provider=AIS");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(providerAisCityStateValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
         // Test Geo Api Functionality
-        HttpURLConnection standardGeoValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/geo/geocode?addr=200 State St, Albany NY 12210");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(standardGeoValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection splitGeoValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/geo/geocode?addr1=200 State St&city=Albany&state=NY&zip5=12210");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(splitGeoValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection providerGeocacheValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/geo/geocode?addr1=200 State St&city=Albany&state=NY&zip5=12210&geocoder=GEOCACHE");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(providerGeocacheValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection providerGoogleValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/geo/geocode?addr1=200 State St&city=Albany&state=NY&zip5=12210&geocoder=GOOGLE");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(providerGoogleValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection providerNYSGeoValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/geo/geocode?addr1=200 State St&city=Albany&state=NY&zip5=12210&geocoder=NYSGEO");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(providerNYSGeoValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection revGeocodeValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/geo/revgeocode?lat=42.6533668&lon=-73.7621715");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(revGeocodeValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
         // Test Street API
-        HttpURLConnection streetValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/street/lookup?zip5=12210");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(streetValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
         // Test Bluebird District Assignment API
-        HttpURLConnection standardBluebirdValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/bluebird?addr=280 Madison Ave New York NY");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(standardBluebirdValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection splitBluebirdValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/bluebird?addr1=280 Madison Ave New York&state=NY");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(splitBluebirdValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
 
         // Test Standard District Assignment
-        HttpURLConnection standardDistAssignValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/assign?addr=280 Madison Ave, New York, NY");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(standardDistAssignValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection splitDistAssignValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/assign?addr1=280 Madison Ave&city=New York&state=NY");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(splitDistAssignValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection standardUIDistAssignValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/assign?addr=200 State Street,Albany,NY,USA&uspsValidate=true&showMaps=true");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(standardUIDistAssignValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection geoProviderGoogleDistAssignValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/assign?addr1=280 Madison Ave&city=New York&state=NY");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(geoProviderGoogleDistAssignValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection providerStreetfileDistAssignValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/assign?addr=200%20State%20Street,%20Albany,%20NY,%20USA&districtSource=STREETFILE&uspsValidate=true&showMaps=true");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(providerStreetfileDistAssignValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection providerShapefileDistAssignValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/assign?addr=200%20State%20Street,%20Albany,%20NY,%20USA&districtSource=SHAPEFILE&uspsValidate=true&showMaps=true");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(providerShapefileDistAssignValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
 
-        HttpURLConnection revGeocodeDistAssignValidate = prodReadinessTest.createHttpRequest(
+        jsonResponse = prodReadinessTest.sendGetRequest(
                 baseUrl,
                 "/api/v2/district/assign?lat=40.751352&lon=-73.980335");
-        jsonResponse = prodReadinessTest.getResponseAndCloseStream(revGeocodeDistAssignValidate);
         assertEquals(0, prodReadinessTest.standardSuccessResponseCheck(jsonResponse));
 
         // Address Batch Validation
-        CloseableHttpResponse addressBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/address/validate/batch", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(addressBatchValidate.getEntity().getContent());
         logger.info("ADDRESS VALIDATION BATCH: {}", jsonResponse);
-        addressBatchValidate.close();
         prodReadinessTest.addressBatchValidateResponseCheck(jsonResponse);
 
-        CloseableHttpResponse badAddressBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/address/validate/batch", badAddressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(badAddressBatchValidate.getEntity().getContent());
         logger.info("BAD ADDRESS VALIDATION BATCH: {}", jsonResponse);
-        badAddressBatchValidate.close();
         prodReadinessTest.badAddressBatchValidateResponseCheck(jsonResponse);
 
-        CloseableHttpResponse providerAisAddressBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/address/validate/batch?provider=AIS", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(providerAisAddressBatchValidate.getEntity().getContent());
-        providerAisAddressBatchValidate.close();
         prodReadinessTest.addressBatchValidateResponseCheck(jsonResponse);
 
 
-        CloseableHttpResponse cityStateBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/address/citystate/batch", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(cityStateBatchValidate.getEntity().getContent());
-        cityStateBatchValidate.close();
         prodReadinessTest.cityStateBatchResponseCheck(jsonResponse);
 
-        CloseableHttpResponse providerAisCityStateBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/address/citystate/batch?provider=AIS", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(providerAisCityStateBatchValidate.getEntity().getContent());
-        providerAisCityStateBatchValidate.close();
         prodReadinessTest.cityStateBatchResponseCheck(jsonResponse);
 
         // Geocode Batch Validation
-        CloseableHttpResponse standardGeocodeBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/geo/geocode/batch", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(standardGeocodeBatchValidate.getEntity().getContent());
-        standardGeocodeBatchValidate.close();
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
 
-        CloseableHttpResponse providerGoogleGeocodeBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/geo/geocode/batch?geocoder=GOOGLE", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(providerGoogleGeocodeBatchValidate.getEntity().getContent());
-        providerGoogleGeocodeBatchValidate.close();
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
 
-        CloseableHttpResponse providerNYSGeoBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/geo/geocode/batch?geocoder=NYSGEO", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(providerNYSGeoBatchValidate.getEntity().getContent());
-        providerNYSGeoBatchValidate.close();
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
 
         // RevGeocode Batch Validation
-        CloseableHttpResponse revGeocodeBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/geo/revgeocode/batch", pointJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(revGeocodeBatchValidate.getEntity().getContent());
-        revGeocodeBatchValidate.close();
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
 
         // Dist Assign Batch Validation
         logger.info("ADDRESS JSON{}", addressJson);
-        CloseableHttpResponse standardDistAssignBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/district/assign/batch", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(standardDistAssignBatchValidate.getEntity().getContent());
         logger.info("DISTRICT ASSIGN BATCH: {}", jsonResponse);
-        standardDistAssignBatchValidate.close();
         logger.info("JSON RESPONSE{}", jsonResponse);
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
 
-        CloseableHttpResponse pointDistAssignBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/district/assign/batch", pointJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(pointDistAssignBatchValidate.getEntity().getContent());
-        pointDistAssignBatchValidate.close();
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
 
         // Bluebird Batch Validation
-        CloseableHttpResponse standardBluebirdBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/district/bluebird/batch", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(standardBluebirdBatchValidate.getEntity().getContent());
         logger.info("BLUEBIRD BATCH: {}", jsonResponse);
-        standardBluebirdBatchValidate.close();
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
 
-        CloseableHttpResponse shapeFallBackBluebirdBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/district/bluebird/batch?districtSource=STREETFILE&uspsValidate=true", addressJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(shapeFallBackBluebirdBatchValidate.getEntity().getContent());
         logger.info("BLUEBIRD BATCH 2: {}", jsonResponse);
-        shapeFallBackBluebirdBatchValidate.close();
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
 
-        CloseableHttpResponse pointBluebirdBatchValidate = prodReadinessTest.createHttpPostRequest(
+        jsonResponse = prodReadinessTest.sendPostRequest(
                 baseUrl,
                 "/api/v2/district/bluebird/batch", pointJson);
-        jsonResponse = prodReadinessTest.getResponseFromInputStream(pointBluebirdBatchValidate.getEntity().getContent());
-        pointBluebirdBatchValidate.close();
         prodReadinessTest.batchSuccessResponseCheck(jsonResponse);
     }
 }
